--- a/front-end/mall4m/pages/address/pages/editAddress/editAddress.wxss
+++ b/front-end/mall4m/pages/address/pages/editAddress/editAddress.wxss
@@ -78,21 +78,21 @@ page {
   line-height: 80rpx;
   margin: auto;
   text-align: center;
-  border: 1rpx solid #eb2444;
+  border: 1rpx solid #eba524;
   border-radius: 50rpx;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05), 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
 .btn-box .keep {
   color: #fff;
-  background-color: #eb2444;
+  background-color: #eba524;
 }
 
 .btn-box .clear.btn {
   /*
   margin-top: 40rpx;
   */
-  color: #eb2444;
+  color: #eba524;
   background-color: #f8f0f1b6;
 }
 
