--- a/front-end/mall4m/pages/search/pages/search-page/search-page.wxss
+++ b/front-end/mall4m/pages/search/pages/search-page/search-page.wxss
@@ -40,7 +40,7 @@
   position: absolute;
   right: 30rpx;
   top: 31rpx;
-  color: #eb2444;
+  color: #eba524;
 }
 
 .search-bar .search-box .search-img {
