--- a/front-end/mall4m/app.wxss
+++ b/front-end/mall4m/app.wxss
@@ -18,7 +18,7 @@ padding-left:10rpx;
 .spaceBetweenFlex{display: flex; justify-content: space-between; align-items: center;}
 .aroundFlex{display: flex; justify-content: space-around;align-items: center}
 .centerFlex{display: flex; justify-content: center; align-items: center;}
-
+.columnFlex{display: flex; justify-content: center; align-items: center; flex-direction: column;}
 /* 价格数字显示不同大小 */
 
 .symbol {
