--- a/front-end/mall4m/pages/index/index.wxml
+++ b/front-end/mall4m/pages/index/index.wxml
@@ -4,142 +4,142 @@
     <view wx:if="{{showADDialog}}" class="dialogMask centerFlex">
         <view class="dialogInfo">
             <view>
-                <image src="/images/dialog.jpg" mode="widthFix" style="width: 70vw;  border-radius: 3vw;"/>
+                <image src="/images/dialog.jpg" mode="widthFix" style="width: 70vw;  border-radius: 3vw;" />
             </view>
-           <view style="margin-top: 5vw;" bindtap="closeDialog">
-               <image src="/images/icon/close1.png" mode="widthFix" style="width:10vw; height:10vw"/>
-           </view>
-        </view>
-    </view>
-	<view style="background-color: rgb(235, 168, 81);position: fixed; top:0;; height:141px; width:100vw;z-index: 999;">
-      <view style="height:70rpx; line-height: 70rpx; padding-top:{{statuBarHeight}}px; color:#fff; font-weight: bold; width:100vw; text-align: center;">
-          小岛袋鼠优选
-      </view>
-      <view class='bg-sear' style="top: 100px; background: transparent;">
-        <view class="scrolltop">
-        <view class='section' bindtap='toSearchPage'>
-            <image src='../../images/icon/search.png' class='search-img'></image>
-            <text class='placeholder'>搜索</text>
-        </view>
-        </view>
-    </view>
-  </view>
-  
-  <view class='content' style="margin-top: 141px;">
-    <!-- swiper -->
-    <swiper autoplay="{{autoplay}}" indicator-color="{{indicatorColor}}" interval="{{interval}}" duration="{{duration}}" indicator-active-color="{{indicatorActiveColor}} " circular='true' class='pic-swiper' indicator-dots previous-margin='20rpx' next-margin='20rpx'>
-      <block wx:for='{{indexImgs}}' wx:key='imgUrl'>
-        <swiper-item class="banner-item" >
-          <view class='img-box' bindtap='toSwiperLinkPage' data-prodid='{{item.relation}}' 
-            data-type='{{item.type}}' 
-            data-item='{{item}}' >
-            <image src='{{item.imgUrl}}' class='banner'></image>
-          </view>
-        </swiper-item>
-      </block>
-    </swiper>
-    <!-- end swiper -->
-
-    <view class='cat-item'>
-      <view class='item' bindtap='toClassifyPage' data-sts="1">
-        <image src='../../images/icon/newProd.png'></image>
-        <text>新品推荐</text>
-      </view>
-      <view class='item' bindtap='toLimitedTimeOffer' data-sts="2">
-        <image src='../../images/icon/timePrice.png'></image>
-        <text>限时特惠</text>
-      </view>
-      <view class='item' bindtap='toClassifyPage' data-sts="3">
-        <image src='../../images/icon/neweveryday.png'></image>
-        <text>每日疯抢</text>
-      </view>
-      <view class='item' bindtap='toCouponCenter'>
-        <image src='../../images/icon/newprods.png'></image>
-        <text>领优惠券</text>
-      </view>
-    </view>
-
-    <!-- 消息播放 -->
-    <view class='message-play' bindtap='onNewsPage'>
-      <image src='../../images/icon/horn.png' class='hornpng'></image>
-      <swiper vertical='true' autoplay='true' duration='1000' class='swiper-cont'>
-        <block wx:for='{{news}}' wx:key='id'>
-          <swiper-item class="items">{{item.title}}</swiper-item>
-        </block>
-      </swiper>
-      <text class='arrow'></text>
-    </view>
-
-  </view>
-
-  <block wx:for="{{taglist}}" wx:key="id">
-    <!-- 每日上新 && 小岛优选 style==2:一行显示3-->
-    <view class='up-to-date' wx:if="{{item.style==2}}">
-      <view class='title'>
-        <text>{{item.title}}</text>
-        <view class='more-prod-cont' bindtap='toClassifyPage' data-sts="0" data-id="{{item.id}}" data-title="{{item.title}}">
-          <text class='more'>查看更多</text>
-        </view>
-      </view>
-      <view class='item-cont'>
-        <block wx:for="{{item.prods}}" wx:for-item="prod" wx:key="prodId">
-          <view class='prod-item' bindtap='toProdPage' data-prodid="{{prod.prodId}}">
-            <view>
-              <view class='imagecont'>
-                <image src='{{prod.pic}}' class='prodimg'></image>
-              </view>
-              <view class='prod-text'>{{prod.prodName}}</view>
-              <view class='price'>
-                <text class='symbol'>￥</text>
-                <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
-                <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
-              </view>
+            <view style="margin-top: 5vw;" bindtap="closeDialog">
+                <image src="/images/icon/close1.png" mode="widthFix" style="width:10vw; height:10vw" />
             </view>
-          </view>
-        </block>
-      </view>
-    </view>
-
-    <!-- 商城热卖 -->
-    <view class='hot-sale' wx:if="{{item.style==1}}">
-      <view class='title'>
-        <text>{{item.title}}</text>
-        <view class='more-prod-cont' bindtap='toClassifyPage' data-sts="0" data-id="{{item.id}}" data-title="{{item.title}}">
-          <text class='more'>更多</text>
-          <text class='arrow'></text>
         </view>
-      </view>
-      <view class='hotsale-item-cont'>
-        <!-- item.prods  wx:for-item="prod" wx:key="prodId"-->
-        <block wx:for="{{item.prods}}"  wx:for-item="prod" wx:key="prodId">
-          <view class='prod-items' bindtap='toProdPage' data-prodid="{{prod.prodId}}">
-            <view class='hot-imagecont'>
-            <!-- prod.pic -->
-              <image src='{{prod.pic}}' class='hotsaleimg'></image>
-            </view>
-            <view class='hot-text'>
-              <view class='hotprod-text'>{{prod.prodName}}</view>
-              <view class='prod-info'>{{prod.brief}}</view>
-              <view class='prod-text-info'>
-                <view class='price'>
-                  <text class='symbol'>￥</text>
-                  <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
-                  <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
+    </view>
+    <!-- 广告弹框 end -->
+
+    <view style="background-color: rgb(235, 168, 81);position: fixed; top:0;; height:141px; width:100vw;z-index: 999;">
+        <view style="height:70rpx; line-height: 70rpx; padding-top:{{statuBarHeight}}px; color:#fff; font-weight: bold; width:100vw; text-align: center;">
+            小岛袋鼠优选
+        </view>
+        <view class='bg-sear' style="top: 100px; background: transparent;">
+            <view class="scrolltop">
+                <view class='section' bindtap='toSearchPage'>
+                    <image src='../../images/icon/search.png' class='search-img'></image>
+                    <text class='placeholder'>搜索</text>
                 </view>
-                <view class='singal-price'>
-                  <text>￥</text>
-                  <text>{{wxs.toPrice(prod.oriPrice)}}</text>
-                </view>
-                <image src='../../images/icon/basket.png' class='basket-img'></image>
-              </view>
             </view>
-          </view>
-        </block>
-      </view>
+        </view>
     </view>
 
-    <!-- 更多宝贝 -->
-    <!-- <view class='more-prod' wx:if="{{item.style==0}}">
+    <view class='content' style="margin-top: 141px;">
+        <!-- swiper -->
+        <swiper autoplay="{{autoplay}}" indicator-color="{{indicatorColor}}" interval="{{interval}}" duration="{{duration}}" indicator-active-color="{{indicatorActiveColor}} " circular='true' class='pic-swiper' indicator-dots previous-margin='20rpx' next-margin='20rpx'>
+            <block wx:for='{{indexImgs}}' wx:key='imgUrl'>
+                <swiper-item class="banner-item">
+                    <view class='img-box' bindtap='toSwiperLinkPage' data-prodid='{{item.relation}}' data-type='{{item.type}}' data-item='{{item}}'>
+                        <image src='{{item.imgUrl}}' class='banner'></image>
+                    </view>
+                </swiper-item>
+            </block>
+        </swiper>
+        <!-- end swiper -->
+
+        <view class='cat-item'>
+            <view class='item' bindtap='toClassifyPage' data-sts="1" data-title="新品推荐">
+                <image src='../../images/icon/newProd.png'></image>
+                <text>新品推荐</text>
+            </view>
+            <view class='item' bindtap='toClassifyPage' data-sts="2" data-title="限时特惠">
+                <image src='../../images/icon/timePrice.png'></image>
+                <text>限时特惠</text>
+            </view>
+            <view class='item' bindtap='toClassifyPage' data-sts="3" data-title="日销量榜">
+                <image src='../../images/icon/neweveryday.png'></image>
+                <text>日销量榜</text>
+            </view>
+            <view class='item' bindtap='toCouponCenter'>
+                <image src='../../images/icon/newprods.png'></image>
+                <text>领优惠券</text>
+            </view>
+        </view>
+
+        <!-- 消息播放 -->
+        <view class='message-play' bindtap='onNewsPage'>
+            <image src='../../images/icon/horn.png' class='hornpng'></image>
+            <swiper vertical='true' autoplay='true' duration='1000' class='swiper-cont'>
+                <block wx:for='{{news}}' wx:key='id'>
+                    <swiper-item class="items">{{item.title}}</swiper-item>
+                </block>
+            </swiper>
+            <text class='arrow'></text>
+        </view>
+
+    </view>
+
+    <block wx:for="{{taglist}}" wx:key="id">
+        <!-- 每日上新 && 小岛优选 style==2:一行显示3-->
+        <view class='up-to-date' wx:if="{{item.style==2}}">
+            <view class='title'>
+                <text>{{item.title}}</text>
+                <view class='more-prod-cont' bindtap='toClassifyPage' data-sts="0" data-id="{{item.id}}" data-title="{{item.title}}">
+                    <text class='more'>查看更多</text>
+                </view>
+            </view>
+            <view class='item-cont'>
+                <block wx:for="{{item.prods}}" wx:for-item="prod" wx:key="prodId">
+                    <view class='prod-item' bindtap='toProdPage' data-prodid="{{prod.prodId}}">
+                        <view>
+                            <view class='imagecont'>
+                                <image src='{{prod.pic}}' class='prodimg'></image>
+                            </view>
+                            <view class='prod-text'>{{prod.prodName}}</view>
+                            <view class='price'>
+                                <text class='symbol'>￥</text>
+                                <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
+                                <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
+                            </view>
+                        </view>
+                    </view>
+                </block>
+            </view>
+        </view>
+
+        <!-- 商城热卖 -->
+        <view class='hot-sale' wx:if="{{item.style==1}}">
+            <view class='title'>
+                <text>{{item.title}}</text>
+                <view class='more-prod-cont' bindtap='toClassifyPage' data-sts="0" data-id="{{item.id}}" data-title="{{item.title}}">
+                    <text class='more'>更多</text>
+                    <text class='arrow'></text>
+                </view>
+            </view>
+            <view class='hotsale-item-cont'>
+                <!-- item.prods  wx:for-item="prod" wx:key="prodId"-->
+                <block wx:for="{{item.prods}}" wx:for-item="prod" wx:key="prodId">
+                    <view class='prod-items' bindtap='toProdPage' data-prodid="{{prod.prodId}}">
+                        <view class='hot-imagecont'>
+                            <!-- prod.pic -->
+                            <image src='{{prod.pic}}' class='hotsaleimg'></image>
+                        </view>
+                        <view class='hot-text'>
+                            <view class='hotprod-text'>{{prod.prodName}}</view>
+                            <view class='prod-info'>{{prod.brief}}</view>
+                            <view class='prod-text-info'>
+                                <view class='price'>
+                                    <text class='symbol'>￥</text>
+                                    <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
+                                    <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
+                                </view>
+                                <view class='singal-price'>
+                                    <text>￥</text>
+                                    <text>{{wxs.toPrice(prod.oriPrice)}}</text>
+                                </view>
+                                <image src='../../images/icon/basket.png' class='basket-img'></image>
+                            </view>
+                        </view>
+                    </view>
+                </block>
+            </view>
+        </view>
+
+        <!-- 更多宝贝 -->
+        <!-- <view class='more-prod' wx:if="{{item.style==0}}">
       <view class='title'>{{item.title}}</view>
       <view class='prod-show'>
         <block wx:for="{{item.prods}}" wx:for-item="prod" wx:key="prodId">
@@ -163,6 +163,6 @@
         </block>
       </view>
     </view> -->
-  </block>
+    </block>
 </view>
 <wxs module="wxs" src="../../wxs/number.wxs" />
